--- a/src/components/LoadMoreBtn/LoadMoreBtn.module.css
+++ b/src/components/LoadMoreBtn/LoadMoreBtn.module.css
@@ -4,6 +4,7 @@
   margin-left: auto;
   margin-right: auto;
 
+  font-family: inherit;
   font-size: 15px;
   text-transform: uppercase;
   letter-spacing: 1.5px;
